# dampen

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  EXECUTION_SUMMARY.txt  EXECUTION_SUMMARY_PHASE3_FINAL.txt  LICENSE-Apache  LICENSE-MIT  PHASE3_COMPLETE.md  README.md  ROADMAP.md  TODO_APP_REFACTOR_PLAN.md  rustfmt.toml  test_column.xml  test_container_debug.rs  test_container_parse.rs  test_hotreload.sh  test_minimal.xml  test_minimal_app.rs  todo-app-data.json
benchmarks/: Cargo.toml  README.md
benchmarks/benches/: dual_mode_bench.rs  hot_reload_bench.rs  parser_bench.rs  prod_mode_bench.rs  startup_bench.rs
crates/dampen-cli/: Cargo.toml  build.rs
crates/dampen-cli/src/: lib.rs  main.rs
crates/dampen-cli/templates/: build.rs  build.rs.template
crates/dampen-cli/tests/: build_production_tests.rs  check_attributes.rs  check_binding.rs  check_handlers.rs  check_integration.rs  check_radio.rs  check_tests.rs  check_theme.rs  cli_add_integration.rs  cli_add_tests.rs  cli_tests.rs  new_tests.rs
crates/dampen-core/: Cargo.toml
crates/dampen-core/benches/: parse_bench.rs
crates/dampen-core/src/: lib.rs
crates/dampen-core/tests/: appstate_tests.rs  breakpoint_tests.rs  codegen_snapshot_tests.rs  codegen_tab_bar.rs  codegen_tests.rs  dampen_parsing_tests.rs  gravity_parsing_tests.rs  ir_tests.rs  nested_if_test.rs  parse_date_picker.rs  parse_time_picker.rs  parser_tab_bar.rs  parser_tests.rs  progress_bar_bar_color_tests.rs  progress_bar_width_tests.rs  proptest_parser.rs  radio_parsing_tests.rs  radio_value_tests.rs  version_tests.rs  widget_parsing_tests.rs
crates/dampen-dev/: Cargo.toml
crates/dampen-dev/src/: lib.rs  overlay.rs  reload.rs  subscription.rs  theme_loader.rs  watcher.rs
crates/dampen-dev/tests/: persistence_tests.rs  subscription_tests.rs  watcher_tests.rs
crates/dampen-iced/: CHANGELOG.md  Cargo.toml  README.md
crates/dampen-iced/benches/: builder_bench.rs  state_resolution.rs
crates/dampen-iced/src/: builder.rs  convert.rs  lib.rs  state.rs  style_mapping.rs  system_theme.rs  theme_adapter.rs
crates/dampen-iced/tests/: backend_tests.rs  builder_basic_tests.rs  builder_complex_tests.rs  builder_state_styles.rs  builder_tab_bar.rs  builder_tab_icons.rs  integration_tests.rs  radio_default_tests.rs  radio_disabled_tests.rs  radio_selection_tests.rs  radio_widget_tests.rs  shared_context_warnings.rs  status_mapping_tests.rs  widget_rendering_tests.rs  widget_state_tests.rs  widget_tests.rs
crates/dampen-lsp/: Cargo.toml
crates/dampen-lsp/src/: analyzer.rs  capabilities.rs  converters.rs  document.rs  lib.rs  main.rs  schema_data.rs
crates/dampen-lsp/tests/: benchmark_tests.rs  edge_case_tests.rs  integration_tests.rs
crates/dampen-macros/: Cargo.toml  build.rs
crates/dampen-macros/src/: dampen_app.rs  discovery.rs  inventory_handlers.rs  lib.rs  shared.rs  ui_handler.rs  ui_loader.rs  ui_model.rs
crates/dampen-macros/tests/: auto_loading_tests.rs  codegen_mode_tests.rs  compile_fail_tests.rs  dampen_app_tests.rs  glob_pattern_research.rs  handler_metadata_tests.rs  interpreted_mode_tests.rs  ui_model_tests.rs
crates/dampen-runtime/: Cargo.toml
crates/dampen-runtime/src/: breakpoint.rs  interpreter.rs  lib.rs  overlay.rs  state.rs  style_cascade.rs  theme_manager.rs
crates/dampen-runtime/tests/: breakpoint_tests.rs  radio_event_tests.rs  theme_tests.rs
crates/dampen-visual-tests/: Cargo.toml
crates/dampen-visual-tests/src/: compare.rs  lib.rs  renderer.rs
crates/dampen-visual-tests/tests/: integration_test.rs
crates/gravity-cli/: Cargo.toml
crates/gravity-cli/src/: lib.rs  main.rs
crates/gravity-cli/templates/: build.rs  build.rs.template
crates/gravity-cli/tests/: check_attributes.rs  check_binding.rs  check_handlers.rs  check_integration.rs  check_radio.rs  check_tests.rs  check_theme.rs  new_tests.rs
crates/gravity-core/: Cargo.toml
crates/gravity-core/benches/: parse_bench.rs  parser_bench.rs
crates/gravity-core/src/: lib.rs
crates/gravity-core/tests/: appstate_tests.rs  breakpoint_tests.rs  codegen_snapshot_tests.rs  codegen_tests.rs  gravity_parsing_tests.rs  ir_tests.rs  parser_tests.rs  proptest_parser.proptest-regressions  proptest_parser.rs  radio_parsing_tests.rs  radio_value_tests.rs  widget_parsing_tests.rs
crates/gravity-iced/: Cargo.toml  README.md
crates/gravity-iced/benches/: builder_bench.rs
crates/gravity-iced/src/: builder.rs  commands.rs  convert.rs  lib.rs  state.rs  style_mapping.rs  theme.rs  theme_adapter.rs
crates/gravity-iced/tests/: backend_tests.rs  builder_basic_tests.rs  builder_complex_tests.rs  integration_tests.rs  radio_default_tests.rs  radio_disabled_tests.rs  radio_selection_tests.rs  radio_widget_tests.rs  widget_rendering_tests.rs  widget_tests.rs
crates/gravity-macros/: Cargo.toml  build.rs
crates/gravity-macros/src/: lib.rs  ui_handler.rs  ui_loader.rs  ui_model.rs
crates/gravity-macros/tests/: auto_loading_tests.rs  handler_metadata_tests.rs  ui_handler_tests.rs  ui_model_tests.rs
crates/gravity-runtime/: Cargo.toml
examples/canvas-demo/: Cargo.toml  README.md  build.rs
examples/counter/: Cargo.toml  build.rs
examples/full-demo/: Cargo.toml  README.md
examples/macro-shared-state/: Cargo.toml
examples/menu-demo/: Cargo.toml  build.rs
examples/responsive/: Cargo.toml  README.md
examples/settings/: Cargo.toml  build.rs
examples/styling/: Cargo.toml  README.md  build.rs
examples/theming/: Cargo.toml  README.md  build.rs
examples/todo-app/: Cargo.toml  README.md  build.rs  test-tasks.json  todo-app-data.json
examples/widget-showcase/: Cargo.toml  README.md
tests/contract/: Cargo.toml  README.md  lib.rs  shared_state_contracts.rs  theme_contracts.rs
tests/hot-reload-integration/: Cargo.toml  PERFORMANCE_NOTES.md  hot_reload_tests.rs  lib.rs  performance_tests.rs
tests/integration/: Cargo.toml  README.md  backward_compat_examples.rs  cli_add_integration.rs  edge_case_tests.rs  lib.rs  mode_parity_tests.rs  shared_state_e2e.rs  style_codegen_e2e.rs  tab_content.rs  theme_e2e.rs
(+741 files in other folders)
