[workspace]
resolver = "2"
members = [
    "crates/gravity-core",
    "crates/gravity-macros",
    "crates/gravity-runtime",
    "crates/gravity-iced",
    "crates/gravity-cli",
    "examples/builder-demo",
    "examples/hello-world",
    "examples/counter",
    "examples/hot-reload-test",
    "examples/todo-app",
    "examples/styling",
    "examples/widget-showcase",
    "examples/responsive",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Gravity Developers <dev@gravity-ui.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/gravity-ui/gravity"
documentation = "https://docs.rs/gravity-core"
readme = "README.md"
keywords = ["ui", "iced", "declarative", "gui", "framework"]
categories = ["gui", "development-tools"]
publish = true

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Parser
roxmltree = "0.19"
nom = "7.1"
csscolorparser = "0.6"

# File watching
notify = "6.0"

# Macros
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# UI Backend
iced = { version = "0.14", features = ["tokio", "canvas", "image", "svg"] }

# Error handling
thiserror = "1.0"

# Testing
proptest = "1.0"
insta = "1.0"
tempfile = "3.0"

[workspace.lints.rust]
unused = "warn"
unused_imports = "warn"
unused_variables = "warn"
dead_code = "warn"
unused_mut = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
