[workspace]
resolver = "2"
members = [
    "crates/dampen-core",
    "crates/dampen-macros",
    "crates/dampen-iced",
    "crates/dampen-dev",
    "crates/dampen-cli",
    "examples/hello-world",
    "examples/counter",
    "examples/todo-app",
    "examples/styling",
    "examples/widget-showcase",
    "examples/settings",
    "benchmarks",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Mattdef <mattdef@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mattdef/dampen"
documentation = "https://docs.rs/dampen-cli"
readme = "README.md"
keywords = ["ui", "iced", "declarative", "gui", "framework"]
categories = ["gui", "development-tools"]
publish = true

[workspace.dependencies]
# Dampen crates
dampen-core = { path = "./crates/dampen-core", version = "0.1.0" }
dampen-macros = { path = "./crates/dampen-macros", version = "0.1.0" }
dampen-iced = { path = "./crates/dampen-iced", version = "0.1.0" }
dampen-dev = { path = "./crates/dampen-dev", version = "0.1.0" }
dampen-cli = { path = "./crates/dampen-cli", version = "0.1.0" }

# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Parser
roxmltree = "0.19"
nom = "7.1"
csscolorparser = "0.6"

# Macros
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# UI Backend
iced = { version = "0.14", features = ["tokio", "canvas", "image", "svg", "advanced"] }

# Error handling
thiserror = "1.0"

# Testing
proptest = "1.0"
insta = "1.0"
tempfile = "3.0"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

[workspace.lints.rust]
unused = "warn"
unused_imports = "warn"
unused_variables = "warn"
dead_code = "warn"
unused_mut = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
