[workspace]
resolver = "2"
members = [
    "crates/dampen-core",
    "crates/dampen-macros",
    "crates/dampen-iced",
    "crates/dampen-dev",
    "crates/dampen-cli",
    "crates/dampen-visual-tests",
    "examples/hello-world",
    "examples/counter",
    "examples/todo-app",
    "examples/styling",
    "examples/theming",
    "examples/widget-showcase",
    "examples/macro-shared-state",
    "examples/datetime-picker",
    "benchmarks",
    "tests/hot-reload-integration",
    "tests/integration",
    "tests/contract",
]

[workspace.package]
version = "0.2.8"
edition = "2024"
rust-version = "1.88"
authors = ["Mattdef <mattdef@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mattdef/dampen"
documentation = "https://docs.rs/dampen-cli"
readme = "README.md"
keywords = ["ui", "iced", "declarative", "gui", "framework"]
categories = ["gui", "development-tools"]
publish = true

[workspace.dependencies]
# Dampen crates
dampen-core = { path = "./crates/dampen-core", version = "0.2.8" }
dampen-macros = { path = "./crates/dampen-macros", version = "0.2.8" }
dampen-iced = { path = "./crates/dampen-iced", version = "0.2.8" }
dampen-dev = { path = "./crates/dampen-dev", version = "0.2.8" }
dampen-cli = { path = "./crates/dampen-cli", version = "0.2.8" }

# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["fs"] }

# Utilities
uuid = { version = "1.0", features = ["v4"] }
directories = "5.0"

# Parser
roxmltree = "0.19"
nom = "7.1"
csscolorparser = "0.6"

# Macros
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# UI Backend
iced = { version = "0.14", features = ["tokio", "canvas", "image", "svg", "advanced"] }

# Error handling
thiserror = "1.0"

# Testing
proptest = "1.0"
insta = "1.0"
tempfile = "3.0"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

[workspace.lints.rust]
unused = "warn"
unused_imports = "warn"
unused_variables = "warn"
dead_code = "warn"
unused_mut = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"

# Profile configurations for dual-mode architecture
# Note: Cargo does not support 'features = [...]' syntax in profile sections.
# Applications should set 'default = ["interpreted"]' in their [features] section
# and use '--features codegen --no-default-features' for production builds.
# See examples/counter/Cargo.toml for reference implementation.

[profile.dev]
# Development profile: Optimized for fast compilation and hot-reload
# Recommended: Use with --features interpreted (or set as package default)
opt-level = 0
debug = true
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
incremental = true
codegen-units = 256

[profile.release]
# Release profile: Optimized for runtime performance with codegen
# Recommended: Use with --features codegen --no-default-features
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "thin"
incremental = false
codegen-units = 16
strip = "debuginfo"
