[package]
name = "dampen-benchmarks"
version = "0.1.0"
edition = "2021"
publish = false

[[bench]]
name = "prod_mode_bench"
harness = false

[[bench]]
name = "startup_bench"
harness = false

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "hot_reload_bench"
harness = false

[[bench]]
name = "dual_mode_bench"
harness = false

[dependencies]
dampen-core = { workspace = true }
dampen-macros = { workspace = true }
dampen-iced = { workspace = true }
dampen-dev = { path = "../crates/dampen-dev" }
iced = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"

[dev-dependencies]
criterion = { workspace = true }
