[package]
name = "dampen-cli"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
description = "Developer CLI for Dampen UI framework"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
dampen-core = { path = "../dampen-core" }
dampen-macros = { path = "../dampen-macros" }
dampen-runtime = { path = "../dampen-runtime" }
dampen-iced = { path = "../dampen-iced" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
iced = { workspace = true }
walkdir = "2.4"
glob = "0.3"
thiserror = { workspace = true }
tempfile = { workspace = true }
lazy_static = "1.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "dampen"
path = "src/main.rs"

[lints]
workspace = true
