[package]
name = "dampen-dev"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
description = "Development mode tooling for Dampen - hot-reload, file watching, and error overlays"
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
# Core dependencies
dampen-core = { workspace = true }
dampen-iced = { workspace = true }
iced = { workspace = true }

# File watching
notify = "6.1"
notify-debouncer-full = "0.3"

# Async/concurrency
crossbeam-channel = "0.5"
futures = "0.3"
tokio = { version = "1.0", features = ["rt", "sync", "fs"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Filesystem
directories = "5.0"

# Logging
tracing = "0.1"

# Error handling
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0"
uuid = { version = "1.0", features = ["v4"] }
