[package]
name = "dampen-iced"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
description = "Iced backend implementation for Dampen UI framework"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
dampen-core = { workspace = true }
iced = { workspace = true }

[dev-dependencies]
criterion = "0.5"
dampen-macros = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
