[package]
name = "dampen-iced"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
description = "Iced backend implementation for Dampen UI framework"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
dampen-core = { workspace = true }
iced = { workspace = true }
serde_json = { workspace = true }
iced_aw = { version = "0.13", default-features = false, features = ["date_picker", "time_picker", "context_menu", "menu"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = "0.5"
dampen-macros = { workspace = true }
serde = { workspace = true }

[[bench]]
name = "state_resolution"
harness = false

[lints]
workspace = true
