[package]
name = "dampen-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish = true
description = "Language Server Protocol implementation for Dampen UI framework"

[[bin]]
name = "dampen-lsp"
path = "src/main.rs"

[lib]
name = "dampen_lsp"
path = "src/lib.rs"

[dependencies]
# Internal crates
dampen-core = { workspace = true }

# LSP framework
tower-lsp = "0.20"
lsp-types = "0.95"

# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "io-std"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# URL handling
url = "2.0"

# LRU cache for documents
lru = "0.12"

# Lazy static initialization
once_cell = "1.0"

[dev-dependencies]
# Testing
tokio-test = "0.4"
insta = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
