[package]
name = "dampen-runtime"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
description = "Runtime support for Dampen UI framework"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
dampen-core = { path = "../dampen-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.0"

[lints]
workspace = true
