[package]
name = "dampen-visual-tests"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "Visual regression testing infrastructure for Dampen UI framework"
repository = { workspace = true }

[dependencies]
iced = { version = "0.14", features = ["wgpu", "tokio"] }
iced_wgpu = "0.14"
iced_renderer = "0.14"
wgpu = "23.0"
image = "0.25"
tokio = { version = "1.0", features = ["rt", "macros"] }
thiserror = "1.0"
dampen-core = { path = "../dampen-core" }
dampen-iced = { path = "../dampen-iced" }

[dev-dependencies]
insta = "1.0"

[lints]
workspace = true
