[package]
name = "gravity-macros"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
description = "Proc macros for Gravity UI framework"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lib]
proc-macro = true

[build-dependencies]
walkdir = "2.5"

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
roxmltree = { workspace = true }

[dev-dependencies]
gravity-core = { path = "../gravity-core" }

[lints]
workspace = true
