[package]
name = "full-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
gravity = { path = "../../crates/gravity-core" }
gravity-iced = { path = "../../crates/gravity-iced" }
gravity-runtime = { path = "../../crates/gravity-runtime" }
serde = { version = "1.0", features = ["derive"] }
iced = { version = "0.14", features = ["tokio"] }

[features]
default = ["dev"]
dev = ["gravity-runtime"]
