[package]
name = "responsive"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
dampen-core = { path = "../../crates/dampen-core" }
dampen-runtime = { path = "../../crates/dampen-runtime" }
dampen-iced = { path = "../../crates/dampen-iced" }
iced = { workspace = true }

[[bin]]
name = "responsive"
path = "src/main.rs"
