[package]
name = "settings"
version = "0.1.0"
edition = "2021"

[dependencies]
gravity-core = { path = "../../crates/gravity-core" }
gravity-iced = { path = "../../crates/gravity-iced" }
gravity-macros = { path = "../../crates/gravity-macros" }
iced = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
