[package]
name = "settings"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
dampen-core = { path = "../../crates/dampen-core" }
dampen-iced = { path = "../../crates/dampen-iced" }
dampen-macros = { path = "../../crates/dampen-macros" }
iced = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
