[package]
name = "styling"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
dampen-core = { path = "../../crates/dampen-core" }
dampen-macros = { path = "../../crates/dampen-macros" }
dampen-runtime = { path = "../../crates/dampen-runtime" }
dampen-iced = { path = "../../crates/dampen-iced" }
iced = { workspace = true }
serde = { workspace = true }

[[bin]]
name = "styling"
path = "src/main.rs"
