[package]
name = "styling"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
dampen-core = { workspace = true }
dampen-macros = { workspace = true }
dampen-iced = { workspace = true }
iced = { workspace = true }
serde = { workspace = true }

[[bin]]
name = "styling"
path = "src/main.rs"
