[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"

[dependencies]
gravity-core = { path = "../../crates/gravity-core" }
gravity-macros = { path = "../../crates/gravity-macros" }
gravity-iced = { path = "../../crates/gravity-iced" }
iced = { version = "0.14", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
