[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
dampen-core = { path = "../../crates/dampen-core" }
dampen-macros = { path = "../../crates/dampen-macros" }
dampen-iced = { path = "../../crates/dampen-iced" }
iced = { version = "0.14", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
