[package]
name = "widget-showcase"
version = "0.1.0"
edition = "2021"
build = "build.rs"
publish = false

[dependencies]
dampen-core = { path = "../../crates/dampen-core" }
dampen-iced = { path = "../../crates/dampen-iced" }
dampen-macros = { path = "../../crates/dampen-macros" }
iced = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
