[package]
name = "contract-tests"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false

[dependencies]
dampen-core = { workspace = true }
dampen-macros = { workspace = true }
dampen-iced = { workspace = true }
dampen-dev = { workspace = true }
serde = { workspace = true }
tempfile = "3.0"

[lib]
path = "lib.rs"

[[test]]
name = "shared_state_contracts"
path = "shared_state_contracts.rs"

[[test]]
name = "theme_contracts"
path = "theme_contracts.rs"
